-Added the filter function for filtering running and down servers and save function for adding servers to list of servers

--- a/.gitignore
+++ b/.gitignore
@@ -561,3 +561,78 @@ Thumbs.db
 .angular/cache/babel-webpack/e7ff1a480f47c982982041333421dc64.json
 .angular/cache/babel-webpack/f6ed3a3cbc400f0d911c3f7d2941ab8e.json
 .angular/cache/babel-webpack/ff361db4738edcb8134ae505fff3bb27.json
+.angular/cache/angular-webpack/916c1dce9b2e8bf062148f25744a7d2683a6e2b5/3.pack
+.angular/cache/angular-webpack/916c1dce9b2e8bf062148f25744a7d2683a6e2b5/4.pack
+.angular/cache/babel-webpack/80ed332dab6583346c1b00b919c4528e.json
+.angular/cache/babel-webpack/698fde836c8697c202329cfa3b751510.json
+.angular/cache/babel-webpack/1f3e1a764738491a4d625039b9adb919.json
+.angular/cache/babel-webpack/7207d3b967c8be82139d9cb987478ad5.json
+.angular/cache/babel-webpack/8235e627acb496d120a6b6329b9bcea5.json
+.angular/cache/babel-webpack/bf3e7d0f7de3677e5cf03531439aaf29.json
+.angular/cache/babel-webpack/0d19d8ad8abe2e8772960eecb9230475.json
+.angular/cache/babel-webpack/4ae8420cb70320a61b8fd6e0757ab1ce.json
+.angular/cache/babel-webpack/20eddb03cee4da3aab0ba1cdfda9a45a.json
+.angular/cache/babel-webpack/39b100e49e0003de330f7aafac9dc9a5.json
+.angular/cache/babel-webpack/189c36498500419ca36eebb872ce3d44.json
+.angular/cache/babel-webpack/39066e7d67fade4c2a5abfa88b0f87b5.json
+.angular/cache/babel-webpack/299076df258a07527162dba92341f7e6.json
+.angular/cache/babel-webpack/c42578a8bf7d6afbf3e662f39433719b.json
+.angular/cache/babel-webpack/0eff73544082906de416349fb67bb464.json
+.angular/cache/babel-webpack/1c41f38636388bc15239e8f3f532424d.json
+.angular/cache/babel-webpack/2a752c20c3e42841c4bad8623af5e97c.json
+.angular/cache/babel-webpack/2adf31c147a9910ea78d6b6dcf6efbe9.json
+.angular/cache/babel-webpack/3f51e524935a96b1a2441f075a001e6c.json
+.angular/cache/babel-webpack/4bc52fe52b57f1bd89411c0461cb8fcb.json
+.angular/cache/babel-webpack/5bbea1c5ddb04cf2f374bc36062629f9.json
+.angular/cache/babel-webpack/5dfcdd8b036aeb3c34e209cac03a2fd4.json
+.angular/cache/babel-webpack/5f2d738353b5544edf503501ccefd76a.json
+.angular/cache/babel-webpack/6ae792436cd537c2091f1d7513ab355c.json
+.angular/cache/babel-webpack/7ac559accbba559e7f245330d7a33056.json
+.angular/cache/babel-webpack/8c8c768dafcb96c8797b5cd552bb8836.json
+.angular/cache/babel-webpack/8e836772a32038216c6231bc67171523.json
+.angular/cache/babel-webpack/11b8f61509fda6cd6360d77670ab81f5.json
+.angular/cache/babel-webpack/35f808b4b056e2e5ec42df481ef326ba.json
+.angular/cache/babel-webpack/42d3668a7c8d48a14949099a6f0e68ea.json
+.angular/cache/babel-webpack/42fd15b843dc4e913f17da4cc097d6b9.json
+.angular/cache/babel-webpack/97ea1344f6013c9cf7632d60f030a77b.json
+.angular/cache/babel-webpack/149fa3d45a0d6268896d3959c495f7a7.json
+.angular/cache/babel-webpack/158b952bccc75ba2cf60a6ce75ae66ef.json
+.angular/cache/babel-webpack/0375c2d6cbf41ab8610105b08cd5ddc1.json
+.angular/cache/babel-webpack/489fd46d254cb8d5262a7cd0d3278c95.json
+.angular/cache/babel-webpack/795ca748839bbf33ab9ff4ed6c0032af.json
+.angular/cache/babel-webpack/1704b9fe11a2a6acef04e0bcfb78f77d.json
+.angular/cache/babel-webpack/2471b4e68c7acb2be6290f4a62d9fe01.json
+.angular/cache/babel-webpack/2990bc8261c4c3c8b491981de5cd23ed.json
+.angular/cache/babel-webpack/7817e84f4a5bdb504c832514c76843ad.json
+.angular/cache/babel-webpack/8275a2045c3bbf47bc784113e7d3a1e2.json
+.angular/cache/babel-webpack/899957de6fed60b0ebc88e7591365429.json
+.angular/cache/babel-webpack/2705516ce7b80fcb7e11f3893f28eb2a.json
+.angular/cache/babel-webpack/a43a797b5ff51a9ad1d8fa44d18cd8e4.json
+.angular/cache/babel-webpack/a77407a74c16a0997c8464752bc75ac5.json
+.angular/cache/babel-webpack/ac4ef845cd5a14ed96c8d637fcd464f2.json
+.angular/cache/babel-webpack/b3b0be68c410c51cff7afab35a53e165.json
+.angular/cache/babel-webpack/c64ac677fd2aa9129b0c2ff39555cb04.json
+.angular/cache/babel-webpack/cd456a204e10a8594dcd5ce3df2d3b28.json
+.angular/cache/babel-webpack/d45bf2cfa5751a39f5246e0434c3275a.json
+.angular/cache/babel-webpack/e1ffd382481c31d11031530ec88578df.json
+.angular/cache/babel-webpack/e583502753988cb94f1e528f176ba879.json
+.angular/cache/babel-webpack/ebcf38fc032ed85f99c1950c2915f69f.json
+.angular/cache/babel-webpack/f088c326bd67de03df506aa99129235b.json
+.angular/cache/babel-webpack/f2397aa665d0ffe375eca260b9df929e.json
+.angular/cache/babel-webpack/f6630ac932a2110dff6d98b1cfed20ad.json
+.angular/cache/babel-webpack/fcb5ce7c2bffd28a6766a5918dc6226a.json
+.angular/cache/babel-webpack/e90690714e2825f7671931b8f46a31fd.json
+.angular/cache/babel-webpack/fb30dab71cf787289f311ef1953ef12c.json
+.angular/cache/babel-webpack/0fe3613cc37d0250552b9ca2da0ed559.json
+.angular/cache/babel-webpack/4f59418ce62df76b1b822dd410801f22.json
+.angular/cache/babel-webpack/7cf029c54850bbe6ddca05f12a13f3ac.json
+.angular/cache/babel-webpack/62b8c239f0e3e85bc1b2fe1c7f77dabd.json
+.angular/cache/babel-webpack/71e0fe4c6146d95588ff4fbb001f7050.json
+.angular/cache/babel-webpack/73d90d725efe7785281287369f23f77c.json
+.angular/cache/babel-webpack/80d2f8ef7ec20ea8b5a5231859edc7c6.json
+.angular/cache/babel-webpack/899f5782764efb0420aacbff6e9847bd.json
+.angular/cache/babel-webpack/8257a63418476e1841e546d885c9e18c.json
+.angular/cache/babel-webpack/216734f460ac348a8ac5703a39e5581a.json
+.angular/cache/babel-webpack/d3c4d759454cd27c5ebcc55dd26253ad.json
+.angular/cache/babel-webpack/d673dbd982092d17b5800a070875e778.json
+.angular/cache/babel-webpack/ff34dce761d68c9514ef49459728b792.json
